--- a/.github/workflows/main_gamestore-demo-app.yml
+++ b/.github/workflows/main_gamestore-demo-app.yml
@@ -26,13 +26,13 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/GameStore.Client
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/<myapp>
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/GameStore.Client
+          path: ${{env.DOTNET_ROOT}}/<myapp>
 
   deploy:
     runs-on: ubuntu-latest
