--- a/GameStore.Client/wwwroot/appsettings.json
+++ b/GameStore.Client/wwwroot/appsettings.json
@@ -1,6 +1,6 @@
 {
     "AzureAd": {
-        "Authority": "https://agreeable-ocean-0ccacfc10.4.azurestaticapps.net/",
+        "Authority": "https://login.microsoftonline.com/tenantid/",
         "ClientId": "b976046b-544d-43ff-8b28-a1cd13a7eb3d",
         "ValidateAuthority": true
     },
