--- a/GameStore.Client/wwwroot/appsettings.json
+++ b/GameStore.Client/wwwroot/appsettings.json
@@ -1,6 +1,6 @@
 {
     "AzureAd": {
-        "Authority": "https://login.microsoftonline.com/tenantid/",
+        "Authority": "https://login.microsoftonline.com/302cbbf0-0010-4c00-8735-fbac82bd878b/",
         "ClientId": "b976046b-544d-43ff-8b28-a1cd13a7eb3d",
         "ValidateAuthority": true
     },
