--- a/GameStore.Client/wwwroot/appsettings.json
+++ b/GameStore.Client/wwwroot/appsettings.json
@@ -2,7 +2,8 @@
     "AzureAd": {
         "Authority": "https://login.microsoftonline.com/302cbbf0-0010-4c00-8735-fbac82bd878b",
         "ClientId": "b976046b-544d-43ff-8b28-a1cd13a7eb3d",
-        "ValidateAuthority": true
+        "CallbackPath": "/signin-oidc",
+        "ValidateAuthority": "true"
     },
     "Groups": {
         "SuperUsersObjectId": "2076bff4-53dd-4b4e-a08b-351d8921658c"
